--- a/BWReportLibrary/build.gradle
+++ b/BWReportLibrary/build.gradle
@@ -16,6 +16,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        renderscriptSupportModeEnabled true
+
     }
 
     sourceSets.main {
@@ -61,6 +63,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.3'
+
+
+    implementation 'com.github.eventtus:photo-editor-android:v1.0'
+
+    implementation 'fr.avianey.com.viewpagerindicator:library:2.4.1@aar'
+
 
 
 }
