--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
@@ -18,6 +21,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
