--- a/BWReportLibrary/src/main/AndroidManifest.xml
+++ b/BWReportLibrary/src/main/AndroidManifest.xml
@@ -1,29 +1,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ultimuslab.bwreportlibrary">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
 
-
     <application
         android:allowBackup="true"
         android:supportsRtl="true"
-        >
+        android:requestLegacyExternalStorage="true">
 
         <activity
             android:name=".FeedbackActivity"
             android:label="@string/report_problem"
             android:theme="@style/LibAppTheme"
-            android:windowSoftInputMode="adjustNothing"/>
+            android:windowSoftInputMode="adjustNothing" />
 
         <activity
             android:name="com.ultimuslab.imageeditengine.ImageEditActivity"
             android:theme="@style/LibAppTheme"
-            android:windowSoftInputMode="adjustNothing"/>
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".PhotoEditorActivity"
             android:configChanges="orientation|screenSize"
